--- a/MyBudgetUI/appsettings.json
+++ b/MyBudgetUI/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BaseAddress": "https://localhost:5001/"
 }
