--- a/MyBudgetUI/appsettings.json
+++ b/MyBudgetUI/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "BaseAddress": "https://localhost:5001/"
+  "BaseAddress": "https://mybudgetsoftware.azurewebsites.net/"
+  //"BaseAddress": "https://localhost:5001/"
 }
